tests/ui/inference/array-len-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/array-len-mismatch.rs:6:26
   |
LL |     let wrong: [u8; 3] = [10, 20];
   |                -------   ^^^^^^^^ expected an array with a fixed size of 3 elements, found one with 2 elements
   |                |    |
   |                |    help: consider specifying the actual array length: `2`
   |                expected due to this

error[E0308]: mismatched types
  --> $DIR/array-len-mismatch.rs:9:26
   |
LL |     let wrong: [u8; 3] = returns_arr();
   |                -------   ^^^^^^^^^^^^^ expected an array with a fixed size of 3 elements, found one with 2 elements
   |                |
   |                expected due to this
   |
note: the function returns_arr is defined here
  --> $DIR/array-len-mismatch.rs:1:1
   |
LL | fn returns_arr() -> [u8; 2] {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: consider specifying the actual array length
   |
LL |     let wrong: [u8; 2] = returns_arr();
   |                     ~
help: consider changing returns_arr's return type
   |
LL | fn returns_arr() -> [u8; 3] {
   |                     ~~~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
